feat: handler docs
